--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -1,5 +1,5 @@
 
-/* header start */
+/* header start /////////////////////////////////////*/
 @media (max-width:1150px){
    
   header .fa-bars{
@@ -19,14 +19,14 @@
 }
 @media (max-width:700px){
     header{
-      padding-right: 15px !important;
+      padding-right: 30px !important;
       padding-left: 10px !important;
-      overflow: hidden;
+     
     }
     
 }
 
-/* introsection start */
+/* introsection start///////////////////////////////////////////////////// */
 @media (max-width:847px){
   .introsection{
    
@@ -103,7 +103,7 @@
 
 
 
-/* Trusted-by-companents-section start */
+/* Trusted-by-companents-section start////////////////////////////////////////////////// */
 
 @media  (max-width:982px){
   .companents1, .companents2,.companents3, .companents4{
@@ -124,7 +124,7 @@
 
 
 
-/* .services-section  start*/
+/* .services-section  start///////////////////////////////////////*/
 @media (max-width:961px)  {
   .service-card{
     flex-basis: 40% !important;
@@ -133,8 +133,9 @@
   }
  
   .services-cards{
-   gap: 5px !important;
-    
+   gap: 10px !important;
+   padding-left: 50px !important; 
+   justify-content: center !important;
   }
 }
 @media  (max-width:962px) {
@@ -545,26 +546,27 @@ font-size: 19px !important;
 /* faq-section -> faq-part */
  
 @media (max-width:1307px){
-  .faq-section-comtanents{
+  .faq-section-companents{
     padding: 100px 30px 71px !important;
   }
 }
 @media (max-width:1142px){
-  .faq-section-comtanents{
+  .faq-section-companents{
     flex-direction: column;
     width: 100% !important;
+    gap: 30px !important;
   }
-  .comtanent-part{
+  .companent-part{
     flex-basis:100% !important;
   }
-  .faq-section-comtanents .comtanent-part div{
+  .faq-section-companents .companent-part div{
       width: 100% !important;
     }
 
 }
 
 @media (max-width:587px){
-  .faq-section-comtanents .comtanent-part div{
+  .faq-section-companents .companent-part div{
       max-width: 420px !important;
       align-items: center !important;
     }
@@ -633,9 +635,8 @@ flex-wrap: nowrap;
    justify-content: center !important;
    gap: 50px !important;
    
-   /* gap: 200px; */
   }
-  .faq-section .footer span{
+  .faq-section .footer a{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
