--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -355,8 +355,8 @@ font-size: 19px !important;
   .product-designer-section .product-right{
       padding: 50px 0 0 !important;
   }
-  
 }
+ 
 /*product-designer-section -> product-image start///////////////////////////////////// */
 @media (max-width:1277px){
   .product-image{
@@ -382,14 +382,29 @@ font-size: 19px !important;
   }
 }
 @media (max-width:797px){
+  .product-image{
+    flex-direction: column;
+    align-items: center;
+  }
   .image-group{
-    /* background-color: aqua; */
     flex-direction: column !important;
     align-items: center;
-    padding-left: 150px !important;
+    
     width: 300px !important;
-   
   }
+  .image-group > div{
+    margin: 0 auto !important;
+  }
+  .image-boy{
+    
+    max-width: 298px !important;
+
+}
+   .image-boy > img{
+
+     width: 100%;
+     height: 100% !important;
+}
 }
 
 /* education-work-experience-section  start//////////////////////////////////////////////*/
