--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,13 @@ header .fa-bars{
     display: flex;
     flex-direction: column;
     padding-top: 133.7px;
-    min-width: 715px;
+    width: 715px;
 }
 .introsection .right-side{
     padding-top: 82px;
-    min-width: 500px;
+    width: 500px;
+}.introsection .right-side > img{
+    width: 100%;
 }
 .introsection .left-side small{
     display: inline-block;
@@ -135,7 +137,7 @@ header .fa-bars{
 }
 .trusted-by-companents-section {
    
-    margin-top: 10px;
+    margin-top: 120px;
     margin-bottom: 10px;
 
 
@@ -148,7 +150,9 @@ header .fa-bars{
 }
 
 /* services-section start//////////////////////////////////////////////////////////////////////////////////////////// */
-
+.services-section{
+    padding-top: 70px;
+}
 .services-section > h4{
     font-family: 'Roboto';
 font-style: normal;
@@ -173,6 +177,10 @@ padding-top: 20px;
 padding-bottom: 117px;
 }
 .service-card img{
+    width:  100%;
+    height: 100%;
+}
+.service-logo{
     width: 70px;
     height: 70px;
 }
@@ -550,8 +558,9 @@ color: rgba(255, 255, 255, 0.7);
 .education-work-experience-section{
     display: flex;
     padding: 154px 112px 0;
-    gap: 54px;
+    gap: 65px;
     flex-wrap: wrap;
+
    
 }
 .education-work-experience-section .education, .work-experience{
@@ -677,24 +686,39 @@ color: rgba(255, 255, 255, 0.7);
     display: flex;
     flex-direction: column;
     padding-top: 40px;
-    min-width: 561px;
+    width: 565px;
 }
-.testimonials-text > img{
+.testimonials-image-text .testimonials-image{
+    width: 485px;
+    height: 450px;
+}
+.testimonials-image > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+.testimon-dirnaq{
     width: 44px;
     height: 44px;
+}
+
+.testimon-dirnaq > img{
+    width: 100%;
+    height: 100%;
 }
 .testimonials-text p{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 33px;
     line-height: 47px;
      padding-top: 30px;
     
 }
 .john-side-arrow{
     display: flex;
-    padding-top: 95px;
+    padding-top: 93px;
     align-items: center;
   justify-content: space-between;
   
