--- a/assets/css/media-query.css
+++ b/assets/css/media-query.css
@@ -27,6 +27,21 @@
 }
 
 /* introsection start///////////////////////////////////////////////////// */
+@media(max-width:1345px){
+  .introsection{
+    flex-direction: column;
+    align-items: center;
+  }
+  .introsection .left-side{
+ 
+    text-align: center;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+}
+
+
+
 @media (max-width:847px){
   .introsection{
    
@@ -39,7 +54,7 @@
   }
   .introsection .left-side h1{
     text-align: center !important;
-    font-size: 60px !important;
+    font-size: 55px !important;
     line-height:65px !important;
 
   }
@@ -53,35 +68,10 @@
   }
 }
 
-@media (min-width:768px) and (max-width:1345px){
-  .introsection{
-    flex-direction: column;
-    align-items: center;
-  }
-  .introsection .left-side{
- 
-    text-align: center;
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
-@media (max-width:768px) {
-  .introsection{
-    flex-direction: column;
-    align-items: center;
-  }
-  .introsection .left-side{
-    
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-  }
-}
+
+
 @media (max-width:556px) {
-  .introsection{
-    overflow-x: hidden;
-   
-    
-  }
+  
  
   .introsection .left-side{
     width: 100% !important;
@@ -89,7 +79,7 @@
     
   }
   .introsection .left-side h1{
-    font-size: 54px !important;
+    font-size: 50px !important;
   }
   .introsection .left-side small{
     
@@ -152,34 +142,21 @@
 
 
 /* .services-section  start//////////////////////////////////////////////////////*/
-@media (max-width:961px)  {
-  .service-card{
-    flex-basis: 40% !important;
-    padding: 10px !important;
-    
-  }
- 
-  .services-cards{
-   gap: 20px !important;
-   padding-left: 50px !important; 
-   justify-content: center !important;
-  }
-  .service-card > .logo-container{
-    padding-left: 80px;
-  }
-}
+
 @media  (max-width:962px) {
   .services-cards{
-    margin: 0 auto !important;
-    padding-left: 30px !important;
+    gap: 20px !important;
   }
   .service-card{
+    margin: 0 auto !important;
     min-width: 329px !important;
     padding-left: 40px !important;
   } 
-  .service-card > ul{
-    align-self: flex-start;
-}
+  .service-card > .logo-container{
+    padding-left: 80px;
+  }
+
+  
 }
   
 @media (max-width:830px) {
@@ -190,22 +167,36 @@
     font-weight: 700;
   font-size: 49px !important;
   }
+  .service-logo{
+    width: 65px !important;
+    height: 65px !important;
+  }
 }
 
 @media (max-width:735px) {
-  .services-cards{
-    flex-direction: column;
-    align-items: center;
-  
-}
-
 .services-section > h1{
  
-font-size: 40px !important;
+font-size: 38px !important;
 }
-.service-card{
-  /* width: 300px !important; */
-  
+}
+@media (max-width:566px) {
+.services-section > h1{
+ 
+font-size: 35px !important;
+}
+.service-logo{
+  width: 60px !important;
+  height: 60px !important;
+}
+}
+@media (max-width:520px) {
+.services-section > h1{
+ 
+font-size: 30px !important;
+}
+.service-logo{
+  width: 50px !important;
+  height: 50px !important;
 }
 }
 
@@ -260,11 +251,12 @@ font-size: 40px !important;
     
   .projects-cards .card{
     width: 100% !important;
+    /* margin: 0 auto !important; */
   }
   .projects-cards .card .card-top{
-    width: 82.9% !important;
     height: 219px !important;
     margin: 0 auto;
+    max-width: 400px !important;
     
  }
  .projects-section .card-bottom{
