--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,26 +156,26 @@ header .fa-bars{
 }
 .services-section > h4{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 22px;
-line-height: 22px;
-text-align: center;
-letter-spacing: 4px;
-color: #FF5E69;
-padding-top: 70px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 4px;
+    color: #FF5E69;
+    padding-top: 70px;
 }
 
 .services-section > h1{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 54px;
-line-height: 59px;
-text-align: center;
-letter-spacing: 1px;
-padding-top: 20px;
-padding-bottom: 117px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 54px;
+    line-height: 59px;
+    text-align: center;
+    letter-spacing: 1px;
+    padding-top: 20px;
+    padding-bottom: 117px;
 }
 .service-card img{
     width:  100%;
@@ -193,11 +193,11 @@ padding-bottom: 117px;
 }
 .service-card > h4{
     font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 26px;
-padding-top: 20px;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 26px;
+    padding-top: 20px;
 }
 .service-card > p{
     font-family: 'Roboto';
@@ -227,12 +227,13 @@ padding-top: 20px;
    
  }
  .service-card{ 
+    /* background-color: #A5BEFF; */
     min-width: 252px;
     padding: 10px;
     transition: all 1s ease;
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     cursor: pointer;
  }
  .service-card:hover{
